[[bin]]
path = "src/q.rs"
name = "q"

[package]
name = "qlisp"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dependencies]
phf = { version = "0.11.1", features = [ "macros",] }
itertools = "0.10.5"
# rand = "*"
# statrs = "*"
num-complex = "0.4.2"
num-traits = "0.2.15"
# ndarray = "*"
# ndarray-npy = "*"
# scilib = "*"
# rustfft = "*"
# ndrustfft = "*"
# rmpfit = "*"
# wigner-symbols = "*"
# uom = "*"
# thiserror = "*"
# anyhow = "*"
reedline = "0.14.0"
clap = { version = "4.0.27", features = [ "derive",] }
strfmt = "0.2.2"

[lib]
path = "lib/lib.rs"
name = "qlisp"

# [dependencies.ndarray-linalg]
# version = "*"
# features = [ "openblas",]

# [dependencies.whooie]
# path = "/home/whooie/Documents/templates/rust/whooie"
# features = [ "nd", "ndarray", "math", "plotting", "pyo3",]

[profile.release]
lto = true
panic = "abort"
